cmake_minimum_required(VERSION 3.16)
if(COMMAND cmake_policy)
    cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

project(html)
file(GLOB html_SRC "src/*")
add_executable(html ${html_SRC})
target_compile_options(html PRIVATE)
target_link_libraries(html m allegro allegro_font allegro_ttf allegro_image allegro_primitives allegro_dialog rmlui)
